# ohlc-crawler

./: .gitignore  pyproject.toml
src/: constants.py  main.py  ohlc_fetcher.py  ohlc_fetcher_initializer.py  tech_indicator_gen.py
src/core/: ohlc_fetcher.py
src/sql/: initialize.py  ohlc_db_connection.py  schema.py
src/utils/: ohlc_fetcher.py
